<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="label">Pinboard</string>
    <string name="pindroid">PinDroid</string>
    <string name="ui_activity_title">Sign in</string>
    <string name="ui_activity_authenticating">Authenticating</string>
    <string name="login_activity_username_label">Username</string>
    <string name="login_activity_password_label">Password</string>
    <string name="login_activity_ok_button">Sign in</string>
    <string name="login_activity_loginfail_text_both">The username or password isn\'t valid. A Pinboard account is
        required. Please try again. </string>
    <string name="login_activity_loginfail_text_pwonly">You entered the wrong password or your account has changed.
        Please re-enter your password.</string>
    <string name="login_activity_loginfail_text_pwmissing">Enter the password for your Pinboard account.</string>
    <string name="login_activity_newaccount_text">Sign in to your Pinboard account. \n\nDon\'t have a Pinboard account?  \nSign up at http://pinboard.in/signup</string>
    <string name="titleMain">Pinboard</string>
    <string name="share_menu_add_bookmark">Pinboard - Add Bookmark</string>
    <string name="share_menu_read_later">Pinboard - Read Later</string>
    <string name="login_no_account">No Pinboard Account Setup</string>
    <string name="save_later_saved">Bookmark Saved</string>
    <string name="main_menu_my_header">My Pinboard</string>
    <string name="main_menu_my_bookmarks">Bookmarks</string>
    <string name="main_menu_my_unread_bookmarks">Unread</string>
    <string name="main_menu_my_tags">Tags</string>
    <string name="main_menu_my_notes">Notes</string>
    <string name="main_menu_feeds_header">Feeds</string>
    <string name="main_menu_network_bookmarks">Network</string>
    <string name="main_menu_recent_bookmarks">Recent</string>
    <string name="main_menu_popular_bookmarks">Popular</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="main_search_results_title">Search Results</string>
    <string name="browse_my_bookmarks_title">My Bookmarks</string>
    <string name="browse_my_unread_bookmarks_title">My Unread Bookmarks</string>
    <string name="browse_my_bookmarks_tagged_title">My Bookmarks Tagged With %1$s</string>
    <string name="browse_my_unread_bookmarks_tagged_title">My Unread Bookmarks Tagged With %1$s</string>
    <string name="browse_recent_bookmarks_title">Recent Bookmarks</string>
    <string name="browse_popular_bookmarks_title">Popular Bookmarks</string>
    <string name="browse_network_bookmarks_title">Network Bookmarks</string>
    <string name="browse_user_bookmarks_title">Bookmarks For %1$s</string>
    <string name="browse_user_bookmarks_tagged_title">Bookmarks For %1$s Tagged With %2$s</string>
    <string name="bookmark_context_open">Open in browser</string>
    <string name="bookmark_context_view">View Details</string>
    <string name="bookmark_context_read">Read</string>
    <string name="bookmark_context_markread">Mark as Read</string>
    <string name="bookmark_context_edit">Edit</string>
    <string name="bookmark_context_delete">Delete</string>
    <string name="bookmark_context_share">Share</string>
    <string name="bookmark_context_add">Add</string>
    <string name="share_chooser_title">Share link</string>
    <string name="bookmark_sort_date_asc">Date (Oldest First)</string>
    <string name="bookmark_sort_date_desc">Date (Newest First)</string>
    <string name="bookmark_sort_description_asc">Description (A-Z)</string>
    <string name="bookmark_sort_description_desc">Description (Z-A)</string>
    <string name="bookmark_sort_url_asc">Url (A-Z)</string>
    <string name="bookmark_sort_url_desc">Url (Z-A)</string>
    <string name="menu_addbookmark_title">Add Bookmark</string>
    <string name="menu_sort_bookmark_title">Sort Bookmarks</string>
    <string name="menu_sort_tag_title">Sort Tags</string>
    <string name="menu_search_title">Search</string>
    <string name="menu_settings_title">Settings</string>
    <string name="menu_choose_account_title">Change Account</string>
    <string name="bookmark_unsynced_alt">Unsynced Indicator</string>
    <string name="bookmark_unread_alt">Unread Indicator</string>
    <string name="browse_my_tags_title">My Tags</string>
    <string name="tag_sort_name_asc">Name (A-Z)</string>
    <string name="tag_sort_name_desc">Name (Z-A)</string>
    <string name="tag_sort_count_asc">Count (Least First)</string>
    <string name="tag_sort_count_desc">Count (Most First)</string>
    <string name="browse_my_notes_title">My Notes</string>
    <string name="add_bookmark_add_title">Add Bookmark</string>
    <string name="add_bookmark_edit_title">Edit Bookmark</string>
    <string name="add_bookmark_default_title">[no title]</string>
    <string name="add_button_save">Save</string>
    <string name="add_button_cancel">Cancel</string>
    <string name="add_title_url">URL</string>
    <string name="add_title_description">Description</string>
    <string name="add_title_notes">Notes</string>
    <string name="add_title_tags">Tags</string>
    <string name="add_title_recommended_tags">Recommended Tags</string>
    <string name="add_title_popular_tags">Popular Tags</string>
    <string name="add_title_private">Private?</string>
    <string name="add_title_toread">To Read?</string>
    <string name="add_bookmark_invalid_url">Error: Blank or invalid URL</string>
    <string name="add_bookmark_blank_url">Error: Blank URL</string>
    <string name="main_search_label">Pinboard</string>
    <string name="main_search_hint">Tags, Titles, Notes</string>
    <string name="main_search_description">Tags, titles, and notes</string>
    <string name="tag_search_label">Pinboard Tags</string>
    <string name="tag_search_hint">Tags</string>
    <string name="bookmark_search_label">Pinboard Bookmarks</string>
    <string name="bookmark_search_hint">Tags, Titles, Notes</string>
    <string name="note_search_label">Pinboard Notes</string>
    <string name="note_search_hint">Notes</string>
    <string name="search_results_bookmark">Bookmark Results</string>
    <string name="search_results_tag">Tag Results</string>
    <string name="search_results_note">Note Results</string>
    <string name="search_results_global_tag">Global Tag Results</string>
    <string name="bookmark_search_results_title">Bookmark Search Results For \"%1$s\"</string>
    <string name="unread_search_results_title">Unread Search Results For \"%1$s\"</string>
    <string name="tag_search_results_title">Tag Search Results For \"%1$s\"</string>
    <string name="note_search_results_title">Note Search Results For \"%1$s\"</string>
    <string name="search_results_global_tag_title">Global Tag Results For \"%1$s\"</string>
    <string name="bookmark_count">bookmark(s)</string>
    <string name="bookmark_content_provider_label">Bookmarks</string>
    <string name="sync_receiver_label">PinDroid Bookmark Sync</string>
    <string name="syncing_toast">Syncing…</string>
    <string name="shortcut_activity_label">Pinboard Tag</string>
    <string name="view_bookmark_title">View Bookmark Details</string>
    <string name="view_bookmark_notes_title">Notes</string>
    <string name="view_bookmark_tags_title">Tags</string>
    <string name="view_bookmark_time_title">Saved on</string>
    <string name="view_bookmark_account_title">By</string>
    <string name="menu_view_title">View</string>
    <string name="menu_view_read_title">Read</string>
    <string name="menu_view_details_title">Details</string>
    <string name="menu_view_openbookmark_title">Web</string>
    <string name="menu_view_editbookmark_title">Edit</string>
    <string name="menu_view_deletebookmark_title">Delete</string>
    <string name="menu_view_sendbookmark_title">Share</string>
    <string name="view_note_title">View Note Details</string>
    <string name="view_note_account_title">By</string>
    <string name="search_widget_label">PinDroid Large</string>
    <string name="small_widget_label">PinDroid Small</string>
    <string name="small_widget_button_default">unread</string>
    <string name="small_widget_configuration_description">Customize your widget.</string>
    <string name="small_widget_my_bookmarks">My Bookmarks</string>
    <string name="small_widget_my_unread">My Unread</string>
    <string name="small_widget_my_tags">My Tags</string>
    <string name="small_widget_my_notes">My Notes</string>
    <string name="small_widget_add_bookmark">Add Bookmark</string>
    <string name="small_widget_search_bookmarks">Search Bookmarks</string>
    <string name="preferences_title">PinDroid Settings</string>
    <string name="account_preferences_cat_title">General settings</string>
    <string name="account_preferences_key">account_settings</string>
    <string name="account_preferences_title">Account Settings</string>
    <string name="account_preferences_summary">Sync and notification settings.</string>
    <string name="pref_cat_general_title">General settings</string>
    <string name="pref_cat_sync_title">Sync settings</string>
    <string name="pref_cat_save_title">Save settings</string>
    <string name="pref_cat_reading_title">Reading options</string>
    <string name="pref_cat_help_title">Help</string>
    <string name="pref_accountsettings_title">Account settings</string>
    <string name="pref_accountsettings_key">pref_accountsettings</string>
    <string name="pref_accountsettings_summary">Manage your Pinboard account on this device.</string>
    <string name="pref_synctime_title">Sync frequency</string>
    <string name="pref_synctime_key">pref_synctime</string>
    <string name="pref_synctime_summary">How often to sync bookmarks.</string>
    <string name="pref_view_bookmark_default_action_title">Bookmark action</string>
    <string name="pref_view_bookmark_default_action_key">pref_view_bookmark_default_action</string>
    <string name="pref_view_bookmark_default_action_summary">Default action for bookmarks.</string>
    <string name="pref_usebrowser_title">Open links in browser</string>
    <string name="pref_usebrowser_key">pref_usebrowser</string>
    <string name="pref_usebrowser_summary">Always open web links in browser app.</string>
    <string name="pref_usebrowser_summary_off">Use internal browser when possible.</string>
    <string name="pref_usebrowser_summary_on">Always open web links in browser app.</string>
    <string name="pref_usebrowser_switch_off">No</string>
    <string name="pref_usebrowser_switch_on">Yes</string>
    <string name="pref_searchicons_title">Display search icons</string>
    <string name="pref_searchicons_key">pref_searchicons</string>
    <string name="pref_searchicons_summary">Display icons in search suggestions.</string>
    <string name="pref_searchicons_summary_off">Don\'t display icons in search suggestions.</string>
    <string name="pref_searchicons_summary_on">Display icons in search suggestions.</string>
    <string name="pref_searchicons_switch_off">No</string>
    <string name="pref_searchicons_switch_on">Yes</string>
    <string name="pref_save_private_default_title">Private default</string>
    <string name="pref_save_private_default_key">pref_save_private_default</string>
    <string name="pref_save_private_default_summary">Set new bookmarks as private by default.</string>
    <string name="alt_bookmark_list_private">Private</string>
    <string name="alt_bookmark_view_private">Private</string>
    <string name="alt_widget_my_bookmarks">My Bookmarks</string>
    <string name="alt_widget_unread_bookmarks">Unread Bookmarks</string>
    <string name="alt_widget_unread_bookmark_count">Unread Bookmark Count</string>
    <string name="alt_widget_my_tags">My Tags</string>
    <string name="alt_widget_my_notes">My Notes</string>
    <string name="alt_widget_add_bookmark">Add Bookmark</string>
    <string name="alt_widget_search">Search</string>
</resources>