<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * DeliciousDroid - http://code.google.com/p/DeliciousDroid/
 *
 * Copyright (C) 2010 Matt Schmidt
 *
 * DeliciousDroid is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published
 * by the Free Software Foundation; either version 3 of the License,
 * or (at your option) any later version.
 *
 * DeliciousDroid is distributed in the hope that it will be useful, but
 * WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 * General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with DeliciousDroid; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
 * USA
 */
 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent">
	<LinearLayout
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:orientation="vertical">
	    <TextView
			android:id="@+id/view_bookmark_title"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:textSize="26sp"
			android:paddingLeft="10dip" />
		<TextView
			android:id="@+id/view_bookmark_url"
			style="@style/ViewBookmarkFieldContent" />
		<TextView
			android:id="@+id/view_bookmark_notes_title"
			style="@style/ViewBookmarkFieldTitle"
			android:text="@string/view_bookmark_notes_title"/>
		<TextView
			android:id="@+id/view_bookmark_notes"
			style="@style/ViewBookmarkFieldContent" />
		<TextView
			android:id="@+id/view_bookmark_tags_title"
			style="@style/ViewBookmarkFieldTitle"
			android:text="@string/view_bookmark_tags_title"/>
		<TextView
			android:id="@+id/view_bookmark_tags"
			style="@style/ViewBookmarkFieldContent" />
		<TextView
			android:id="@+id/view_bookmark_time_title"
			style="@style/ViewBookmarkFieldTitle"
			android:text="@string/view_bookmark_time_title"/>
		<TextView
			android:id="@+id/view_bookmark_time"
			style="@style/ViewBookmarkFieldContent" />
		<TextView
			android:id="@+id/view_bookmark_account_title"
			style="@style/ViewBookmarkFieldTitle"
			android:paddingTop="5dip"
			android:text="@string/view_bookmark_account_title"/>
		<TextView
			android:id="@+id/view_bookmark_account"
			style="@style/ViewBookmarkFieldContent" />
	</LinearLayout>
</ScrollView>