<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * PinDroid - http://code.google.com/p/PinDroid/
 *
 * Copyright (C) 2010 Matt Schmidt
 *
 * PinDroid is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published
 * by the Free Software Foundation; either version 3 of the License,
 * or (at your option) any later version.
 *
 * PinDroid is distributed in the hope that it will be useful, but
 * WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 * General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with PinDroid; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
 * USA
 */
 -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:id="@+id/view_bookmark_container"
	android:background="#000000">
	<ScrollView 
	    android:id="@+id/bookmark_scroll_view"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:visibility="gone">
		<LinearLayout
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingTop="@dimen/view_bookmark_padding_top"
			android:paddingLeft="@dimen/view_bookmark_padding_left">
			<LinearLayout
				android:layout_width="fill_parent" 
				android:layout_height="fill_parent"
				android:orientation="horizontal">
				<LinearLayout
					android:orientation="vertical"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="4dp"
					android:paddingTop="4dp"
					android:paddingBottom="4dp">
					<ImageView
						android:layout_width="16dip"
						android:layout_height="16dip"
						android:id="@+id/view_bookmark_private"
						android:contentDescription="@string/alt_bookmark_view_private"
						android:src="@drawable/padlock"
						android:visibility="invisible"/>
					<ImageView
						android:layout_width="16dip"
						android:layout_height="16dip"
						android:layout_marginTop="5dp"
						android:id="@+id/view_bookmark_synced"
						android:src="@drawable/sync"
						android:visibility="invisible" />
				</LinearLayout>
			    <TextView
					android:id="@+id/view_bookmark_title"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:textSize="@dimen/view_bookmark_title_text"
					android:paddingLeft="10dip" />
			</LinearLayout>
			<TextView
				android:id="@+id/view_bookmark_url"
				style="@style/ViewBookmarkFieldContent"
				android:autoLink="web" />
			<TextView
				android:id="@+id/view_bookmark_notes_title"
				style="@style/ViewBookmarkFieldTitle"
				android:text="@string/view_bookmark_notes_title"/>
			<TextView
				android:id="@+id/view_bookmark_notes"
				style="@style/ViewBookmarkFieldContent" />
			<TextView
				android:id="@+id/view_bookmark_tags_title"
				style="@style/ViewBookmarkFieldTitle"
				android:text="@string/view_bookmark_tags_title"/>
			<TextView
				android:id="@+id/view_bookmark_tags"
				style="@style/ViewBookmarkFieldContent" />
			<include layout="@layout/view_bookmark_time_account" />
		</LinearLayout>
	</ScrollView>
	<WebView
		android:id="@+id/web_view"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:textSize="14sp"
		android:background="#000000"
		android:paddingLeft="10dip"
		android:paddingTop="20dip" 
		android:visibility="gone" />
	<include android:id="@+id/read_bookmark_section" layout="@layout/read_view" />
</FrameLayout>